<resources>
    <string name="app_name">ATM Consultoria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ATM Consultoria</string>
    <string name="nav_header_subtitle">atendimento@atmconsultoria.com.br</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_principal">Principal</string>
    <string name="menu_servico">Serviços</string>
    <string name="menu_cliente">Clientes</string>
    <string name="menu_contato">Contato</string>
    <string name="menu_sobre">Sobre</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="decricao_logo">Logo da Empresa</string>
    <string name="textGesteao">Sistema de gestão de qualidade</string>
    <string name="textoTeste">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dapibus rhoncus nulla ut eleifend. Maecenas eget tortor dictum, rhoncus elit eget, cursus lectus. Donec nec convallis nunc, vitae efficitur dolor. Cras malesuada justo et metus fringilla posuere. In ornare leo at mattis malesuada. Suspendisse potenti. Donec dolor odio, gravida id ultricies vitae, maximus eget mi. Proin pulvinar orci non est placerat egestas.</string>
    <string name="textIndicador">Indicadores de desempenho</string>
    <string name="clientes">Clientes</string>
    <string name="textCliente">Em mais de 15 anos de existência a ATM acumula experiência em serviços de consultoria para empresas nacionais e multicionais de diversos portes, tendo atendido mais de 1000 empresas desde sua abertura.</string>
    <string name="empresa1">Cielo</string>
    <string name="empresa2">Braskem</string>
    <string name="empresa3">Gerdau</string>
    <string name="empresa4">Embraer</string>
    <string name="empresa5">Natura</string>
    <string name="empresa6">Lojas Americanas</string>
</resources>
